methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:13: error: Unit does not take parameters
    replacageCoteDroiteDebout()
                             ^PictureMono3:15: error: not found: value replacageCoteGauche
    replacageCoteGauche()
    ^PictureMono3:17: error: Unit does not take parameters
  replacageCoteDroiteDebout()
                           ^